# squall

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  install.sh
.claude/: LET_IT_CRASH.md  SOLID.md  TDD.md  THREE_VIRTUES.md
.claude/docs/: META_COGNITIVE_ARCHITECTURE.md  SKILL_AUTHORING.md  SKILL_FORMAT.md
.claude/skills/: .pull-source
.claude/skills/_template/: SKILL.md
.claude/skills/issue-investigator/: SKILL.md
.claude/skills/pull-template/: SKILL.md
.claude/skills/self-improvement-loop/: SKILL.md
.claude/skills/squall-deep-research/: SKILL.md
.github/workflows/: ci.yml
.squall/: review-schema.json
.squall/research/: ensemble-methods.md  feedback-loops.md  llm-routing.md  multi-agent-debate.md  structured-output.md
docs/: CLAUDE-ORCHESTRATION-DEEP-DIVE.md  PAL-ARCHITECTURE-REVIEW.md  REVIEW-TOOL-DESIGN.md  SQUALL-ARCHITECTURE-PROPOSAL.md  SQUALL-NEXT-RESEARCH.md  ZEN-USAGE-ANALYSIS.md
scripts/: pre-commit.sh
src/: config.rs  context.rs  error.rs  findings.rs  lib.rs  main.rs  memory.rs  response.rs  review.rs  server.rs
src/dispatch/: async_poll.rs  cli.rs  http.rs  mod.rs  registry.rs
src/memory/: global.rs  local.rs  mod.rs  schema.rs
src/parsers/: codex.rs  gemini.rs  mod.rs
src/tools/: chat.rs  clink.rs  enums.rs  listmodels.rs  memory.rs  mod.rs  parallel.rs  review.rs
tests/: async_poll.rs  cli_persistence.rs  defects.rs  file_context.rs  global_memory.rs  hard_gates.rs  hardening.rs  memory.rs  phase2.rs  phase3_defects.rs  phase4_defects.rs  review.rs  smoke.rs  streaming.rs
(+7 files in other folders)
