[package]
name = "squall"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "=0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
