[package]
name = "squall"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "=0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
eventsource-stream = "0.2"
tokio-util = "0.7"
futures-util = "0.3"
dotenvy = "0.15"
toml = "0.8"
duckdb = { version = "1.4", optional = true, features = ["bundled"] }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = ["global-memory"]
global-memory = ["duckdb", "sha2", "hex"]

[dev-dependencies]
tokio-test = "0.4"
